Make wallet audits transaction-aware
Keep wallet and market audit outcomes aligned with durable mutations, refunds, and shared transaction correlations.

[skip actions]